--- a/main.html
+++ b/main.html
@@ -10,7 +10,20 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+ <h1>3 random videos</h1>
+        <nav>
+    <ul>
+        <li>
+            <a target="_blank" href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">Home</a>
+        </li>
+        <li>
+            <a target="_blank" href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4">About</a>
+        </li>
+        <li>
+            <a target="_blank" href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4">Contact us</a>
+        </li>
+    </ul>
+</nav>
 </body>
 
 </html>
