--- a/main.html
+++ b/main.html
@@ -10,7 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<header>
  <h1>3 random videos</h1>
+		</header>
         <nav>
     <ul>
         <li>
